[package]
name = "blog-backend"
version = "0.1.0"
edition = "2024"
default-run = "blog-backend"

[dependencies]
anyhow = "1"

# Tokio 运行时（按需启用，避免用 "full"）
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }

# Axum 0.7：关闭默认特性，显式开启 tokio + http1（http2 可按需再开）
axum = { version = "0.7.9", default-features = false, features = ["tokio", "macros", "multipart", "http1", "http2", "json", "query"] }

# Axum Extra（与 0.7 兼容）
axum-extra = { version = "0.9", features = ["typed-header"] }

# 常用中间件（无需直接依赖 tower/tower-service，避免两套版本）
tower-http = { version = "0.5.2", features = ["cors", "trace", "compression-full", "decompression-full", "set-header", "fs"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_with = "3"

# SQLx（Tokio + Rustls，避免本地 OpenSSL 依赖）
sqlx = { version = "0.7.4", features = ["sqlite", "macros", "chrono", "uuid", "runtime-tokio-rustls"] }

# 其它依赖
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
comrak = "0.24"
regex = "1"
once_cell = "1"
rand = "0.8"
